--- a/Bug Tracker.csproj
+++ b/Bug Tracker.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Helpers\ImageUploadValidator.cs" />
     <Compile Include="Helpers\SearchHelper.cs" />
     <Compile Include="Helpers\Slug.cs" />
+    <Compile Include="Helpers\UserRolesHelper.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\EmailModel.cs" />
