--- a/Bug Tracker.csproj
+++ b/Bug Tracker.csproj
@@ -237,6 +237,7 @@
     <Content Include="Views\Account\ConfirmationSent.cshtml" />
     <Content Include="site.webmanifest" />
     <Content Include="Views\Admin\ManageRoles.cshtml" />
+    <Content Include="Views\Admin\ManageProjects.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
