--- a/Bug Tracker.csproj
+++ b/Bug Tracker.csproj
@@ -324,6 +324,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Uploads\" />
     <Folder Include="Views\ProjectsHelper\" />
   </ItemGroup>
   <ItemGroup>
