--- a/Bug Tracker.csproj
+++ b/Bug Tracker.csproj
@@ -229,6 +229,46 @@
     <Content Include="Images\avatarPlaceholder.png" />
     <Content Include="Images\Profile.JPG" />
     <Content Include="Images\undraw_posting_photo.svg" />
+    <Content Include="FileIcons\after-effects.png" />
+    <Content Include="FileIcons\ai.png" />
+    <Content Include="FileIcons\audition.png" />
+    <Content Include="FileIcons\avi.png" />
+    <Content Include="FileIcons\bridge.png" />
+    <Content Include="FileIcons\css.png" />
+    <Content Include="FileIcons\csv.png" />
+    <Content Include="FileIcons\dbf.png" />
+    <Content Include="FileIcons\doc.png" />
+    <Content Include="FileIcons\dreamweaver.png" />
+    <Content Include="FileIcons\dwg.png" />
+    <Content Include="FileIcons\exe.png" />
+    <Content Include="FileIcons\file.png" />
+    <Content Include="FileIcons\fireworks.png" />
+    <Content Include="FileIcons\fla.png" />
+    <Content Include="FileIcons\flash.png" />
+    <Content Include="FileIcons\html.png" />
+    <Content Include="FileIcons\illustrator.png" />
+    <Content Include="FileIcons\indesign.png" />
+    <Content Include="FileIcons\iso.png" />
+    <Content Include="FileIcons\javascript.png" />
+    <Content Include="FileIcons\jpg.png" />
+    <Content Include="FileIcons\json-file.png" />
+    <Content Include="FileIcons\mp3.png" />
+    <Content Include="FileIcons\mp4.png" />
+    <Content Include="FileIcons\pdf.png" />
+    <Content Include="FileIcons\photoshop.png" />
+    <Content Include="FileIcons\png.png" />
+    <Content Include="FileIcons\ppt.png" />
+    <Content Include="FileIcons\prelude.png" />
+    <Content Include="FileIcons\premiere.png" />
+    <Content Include="FileIcons\psd.png" />
+    <Content Include="FileIcons\rtf.png" />
+    <Content Include="FileIcons\search.png" />
+    <Content Include="FileIcons\svg.png" />
+    <Content Include="FileIcons\txt.png" />
+    <Content Include="FileIcons\xls.png" />
+    <Content Include="FileIcons\xml.png" />
+    <Content Include="FileIcons\zip-1.png" />
+    <Content Include="FileIcons\zip.png" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\chart-area-demo.js" />
     <Content Include="Scripts\chart-bar-demo.js" />
